Name:                GoogleDirections
Version:             0.4
Synopsis:            Haskell Interface to Google Directions API
Description:         An interface to the Google Directions API
License:             BSD3
License-file:        LICENSE
Author:              Favil Orbedios <favilo@gmail.com>
Maintainer:          Favil Orbedios <favilo@gmail.com>
Copyright:           (c) 2010 Favil Orbedios
Category:            Network
Build-type:          Simple
Extra-source-files:  README
Cabal-version:       >=1.2

Library
  Exposed-modules:    Google.Directions
  hs-source-dirs:     src
  ghc-options:       -Wall
  Build-depends:      base >=4 && <5
                    , bytestring
                    , aeson
                    , text
                    , download-curl
                    , HTTP >= 4000
                    , time
